Соединение между собой логина и регистрации, обнаружение ошибки остановки сервера при несовпадении имени и пароля

--- a/client/registration/registration.html
+++ b/client/registration/registration.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./registration.css">
     <title>Регистрация</title>
 </head>
 <body>
@@ -14,6 +15,7 @@
         <input type="password" id="sign_pass" name="reg_pass" placeholder="Введите пароль" required>
         <br>
         <button type="submit">Зарегистрироваться</button>
+        <a href="../login/login.html">Логин</a>
     </form>
 
     <script src="registration.js"></script>
