--- a/client/login/login.html
+++ b/client/login/login.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Регистрация</title>
+    <link rel="stylesheet" href="./login.css">
+    <title>Логин</title>
 </head>
 <body>
     <form method="POST" action="#">
@@ -14,6 +15,7 @@
         <input type="password" id="auth_pass" name="log_pass" placeholder="Введите пароль" required>
         <br>
         <button type="submit">Войти</button>
+        <a href="../registration/registration.html">Регистрация</a>
     </form>
 
     <script src="login.js"></script>
