Добавление имени на главной странице при успшеной авторизации пользователя

--- a/client/main-page/file_sharing.html
+++ b/client/main-page/file_sharing.html
@@ -11,7 +11,9 @@
     <header>
         <form method="POST" action="#">
             <label>Имя пользователя:</label>
-            <span id="userName">Общий</span>
+            <div class="user-name">
+                
+            </div>
         </form>
         <div class="profile">
             <a href="#">Профиль</a>
@@ -30,5 +32,6 @@
             <span class="main-span">Загруженные файлы</span>
         </div>
     </main>
+    <script src="./file_sharing.js"></script>
 </body>
 </html>
