Загрузка файлов в папку

--- a/client/main-page/file_sharing.html
+++ b/client/main-page/file_sharing.html
@@ -32,7 +32,7 @@
 
         <div class="download_files">
             <span class="main-span">Загруженные файлы</span>
-            <div class="files">
+            <div id="files">
 
             </div>
         </div>
